RESOLVED FIXED30719
Fix the Chromium build after IsloatedWorld change (r49963)
https://bugs.webkit.org/show_bug.cgi?id=30719
Summary Fix the Chromium build after IsloatedWorld change (r49963)
Tony Chang
Reported 2009-10-23 10:57:36 PDT
see summary
Attachments
Patch v1 (5.26 KB, patch)
2009-10-23 11:02 PDT, Tony Chang
no flags
Patch v1 (8.64 KB, patch)
2009-10-23 11:11 PDT, Tony Chang
no flags
v2 (8.62 KB, patch)
2009-10-23 11:31 PDT, Tony Chang
levin: review+
Tony Chang
Comment 1 2009-10-23 11:02:19 PDT
Created attachment 41732 [details] Patch v1
Tony Chang
Comment 2 2009-10-23 11:02:53 PDT
Comment on attachment 41732 [details] Patch v1 need changelog
Tony Chang
Comment 3 2009-10-23 11:11:27 PDT
Created attachment 41734 [details] Patch v1
Tony Chang
Comment 4 2009-10-23 11:12:42 PDT
(In reply to comment #3) > Created an attachment (id=41734) [details] > Patch v1 I haven't tested the compile for webkit mac, let me do that before landing this.
David Levin
Comment 5 2009-10-23 11:25:46 PDT
Comment on attachment 41734 [details] Patch v1 > diff --git a/WebCore/bindings/v8/ScriptController.cpp b/WebCore/bindings/v8/ScriptController.cpp > +// FIXME Would be nice to say what is to be fixed. > +DOMWrapperWorld* mainThreadNormalWorld() > +{ > + return 0; > +} > diff --git a/WebCore/bindings/v8/ScriptController.h b/WebCore/bindings/v8/ScriptController.h > + // FIXME: Stub method so we compile. Currently called from > + // FrameLoader.cpp. > + DOMWrapperWorld* mainThreadNormalWorld(); Why not move this comment inside of the cpp file and just not have it here? (Is there anything to fix with the prototype?) > diff --git a/WebCore/dom/Document.cpp b/WebCore/dom/Document.cpp > +#if USE(JSC) > world->rememberDocument(this); Can this method be implemented (to do nothing) for V8 and then remove this ifdef in the code? > +#endif
Tony Chang
Comment 6 2009-10-23 11:31:34 PDT
Tony Chang
Comment 7 2009-10-23 11:32:57 PDT
(In reply to comment #5) > (From update of attachment 41734 [details]) > > diff --git a/WebCore/bindings/v8/ScriptController.h b/WebCore/bindings/v8/ScriptController.h > > > + // FIXME: Stub method so we compile. Currently called from > > + // FrameLoader.cpp. > > + DOMWrapperWorld* mainThreadNormalWorld(); > > Why not move this comment inside of the cpp file and just not have it here? > (Is there anything to fix with the prototype?) Done. > > diff --git a/WebCore/dom/Document.cpp b/WebCore/dom/Document.cpp > > +#if USE(JSC) > > world->rememberDocument(this); > Can this method be implemented (to do nothing) for V8 and then remove this > ifdef in the code? > > > +#endif That would involve implementing |world| (currently, we get by because it's just a pointer that gets passed around). abarth volunteered to do some cleanup after this.
Adam Barth
Comment 8 2009-10-23 11:38:57 PDT
(In reply to comment #7) > That would involve implementing |world| (currently, we get by because it's just > a pointer that gets passed around). abarth volunteered to do some cleanup > after this. We'll implement |world| eventually. At the moment, the object we use for that has a different lifetime than in JSC, so it will require more surgery than we want to do in this patch.
Tony Chang
Comment 9 2009-10-23 13:16:23 PDT
Note You need to log in before you can comment on or make changes to this bug.