2009-10-23  Tony Chang  <tony@chromium.org>

Reviewed by David Levin.

        Fix Chromium build after IsoldatedWorld change (r49963).
        https://bugs.webkit.org/show_bug.cgi?id=30719

        * bindings/ScriptControllerBase.cpp:
        * bindings/js/ScriptController.cpp:
        (WebCore::ScriptController::executeScriptInIsolatedWorld):
        * bindings/v8/ScriptController.cpp:
        (WebCore::mainThreadNormalWorld):
        * bindings/v8/ScriptController.h:
        (WebCore::ScriptController::windowShell):
        (WebCore::ScriptController::existingWindowShell):
        * dom/Document.cpp:
        (WebCore::Document::createWrapperCache):
        * dom/ScriptExecutionContext.cpp:
        * dom/ScriptExecutionContext.h:
        * xml/XMLHttpRequest.cpp:
        * xml/XMLHttpRequest.h:




Canonical link: https://commits.webkit.org/41446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49992 268f45cc-cd09-0410-ab3c-d52691b4dbfc