WebCore/dom/ScriptExecutionContext.h
@@ -104,7 +104,9 @@ namespace WebCore {
         void removeTimeout(int timeoutId);
         DOMTimer* findTimeout(int timeoutId);
 
+#if USE(JSC)
         JSC::JSGlobalData* globalData();
+#endif
 
     protected:
         // Explicitly override the security origin for this script context.
