WebCore/xml/XMLHttpRequest.h
@@ -26,12 +26,10 @@
 #include "EventNames.h"
 #include "EventTarget.h"
 #include "FormData.h"
-#include "JSDOMBinding.h"
 #include "ResourceResponse.h"
 #include "ScriptString.h"
 #include "ThreadableLoaderClient.h"
 #include <wtf/OwnPtr.h>
-#include <runtime/Protect.h>
 
 namespace WebCore {
 
